changed color contrast issues

--- a/style/style.css
+++ b/style/style.css
@@ -17,4 +17,8 @@ img{
    margin-right: auto;
 }
 
+#about-p {
+  text-indent: 30px;
+}
+
 
